--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="title_activity_main">Schedule</string>
     <string name="title_activity_setting">SettingActivity</string>
+    <string name="title_activity_edit">EditActivity</string>
 </resources>
