--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,27 @@
 <resources>
     <string name="app_name">Schedule</string>
 
-    <string name="hello_world">Hello world!</string>
-
     <string name="action_settings">Settings</string>
     <string name="action_confirm">Confirm</string>
+    <string name="action_delete">Delete</string>
 
     <string name="title_activity_main">Schedule</string>
     <string name="title_activity_setting">SettingActivity</string>
     <string name="title_activity_edit">EditActivity</string>
+
+    <string name="start_time">Start Time</string>
+    <string name="end_time">End Time</string>
+    <string name="start_term">Start Term</string>
+    <string name="end_term">End Term</string>
+    <string name="location">Location</string>
+    <string name="description">Description</string>
+    <string name="title">Title</string>
+
+    <string name="short_sunday">S</string>
+    <string name="short_monday">M</string>
+    <string name="short_tuesday">T</string>
+    <string name="short_wednesday">W</string>
+    <string name="short_thursday">Th</string>
+    <string name="short_friday">F</string>
+    <string name="short_saturday">S</string>
 </resources>
