Implement save function for editing Add icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="short_thursday">Th</string>
     <string name="short_friday">F</string>
     <string name="short_saturday">S</string>
+    <string name="action_save">Save</string>
 </resources>
