--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
 
     <string name="empty">Empty</string>
     <string name="add_widget">Add widget</string>
+    <string name="label">label</string>
 </resources>
